--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -24,6 +24,10 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
+    - name: Debug CSV Columns
+      run: |
+        python -c "import pandas as pd; df = pd.read_csv('avocado.csv'); print('CSV Columns:', df.columns.tolist())"
+
     - name: Train the model
       run: |
         python Multi_Regressions_model.py
@@ -33,4 +37,5 @@ jobs:
       with:
         name: trained-model
         path: models/
+
 
